test/Common/LinkerScriptParsing/Errors/Sections/IncludeErrorInMainScript/Inputs/script_with_archive.t
SECTIONS
{
  .text.hot : {
     1*.o (.text.eldfn*)
  }

  .text.cold : {
    INCLUDE include.t
  }

  .text :: { *(.text*) }

  .data : { *(.data.*) }
}
